# search-api-actix-rust

./: .gitignore  .gitpod.yml  README.md
rust/: Cargo.toml
rust/src/: errors.rs  main.rs
rust/src/mocks/: api.rs
rust/src/routes/: README.MD  mod.rs  search.rs
rust/src/search/: README.md  highlighting.rs  mod.rs
typescript/: README.md  package-lock.json  package.json
typescript/src/: App.tsx  PartsList.tsx
